--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Super_Inzynierka</string>
+    <string name="connect_button">Connect</string>
+    <string name="display">Display</string>
 </resources>
