--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">Super_Inzynierka</string>
-    <string name="connect_button">Connect</string>
+    <string name="start_button">Start</string>
+    <string name="stop_button">Stop</string>
     <string name="display">Display</string>
+    <string name="service_name">service_name</string>
+    <string name="service_status_monitor">service_status_monitor</string>
+
 </resources>
