--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Super_Inzynierka</string>
+    <string name="app_name">SpyApp</string>
     <string name="start_button">Start</string>
     <string name="stop_button">Stop</string>
     <string name="display">Display</string>
